--- a/index.html
+++ b/index.html
@@ -293,9 +293,7 @@ transition: 1s;
       <span>Enter Your Name</span>
       <i></i>
   </div>
-</div><button  onclick="
-troyee();
-">
+</div><button class="js-enter-btn">
   <span class="shadow"></span>
   <span class="edge"></span>
   <span class="front text"> Click me
