--- a/anniversary.html
+++ b/anniversary.html
@@ -41,58 +41,58 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-								<img src="first-meet/pic1.jpg"  alt="" />
+								<img src="anniversary/pic1.jpg"  alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic15.jpg" alt="" />
+								<img src="anniversary/pic15.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic3.jpg" alt="" />
+								<img src="anniversary/pic3.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic4.jpg" alt="" />
+								<img src="anniversary/pic4.jpg" alt="" />
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<img src="first-meet/pic5.jpg" alt="" />
+								<img src="anniversary/pic5.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic6.jpg" alt="" />
+								<img src="anniversary/pic6.jpg" alt="" />
 							</div>
 							<div class="image fit">
-						<img src="first-meet/pic7.jpg" alt="" />
+						<img src="anniversary/pic7.jpg" alt="" />
 							</div>
 							<div class="image fit">
-						<img src="first-meet/pic8.jpg" alt="" />
+						<img src="anniversary/pic8.jpg" alt="" />
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-							<img src="first-meet/pic9.jpg" alt="" />
+							<img src="anniversary/pic9.jpg" alt="" />
 							</div>
 							<div class="image fit">
-							<img src="first-meet/pic10.jpg" alt="" />
+							<img src="anniversary/pic10.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic11.jpg" alt="" />
+								<img src="anniversary/pic11.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic12.jpg" alt="" />
+								<img src="anniversary/pic12.jpg" alt="" />
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href=""><img src="first-meet/pic13.jpg" alt="" />
+								<a href=""><img src="anniversary/pic13.jpg" alt="" />
 							</div>
 							<div class="image fit">
-						<img src="first-meet/pic14.jpg" alt="" />
+						<img src="anniversary/pic14.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic2.jpg" alt="" />
+								<img src="anniversary/pic2.jpg" alt="" />
 							</div>
 							<div class="image fit">
-								<img src="first-meet/pic16.jpg" alt="" />
+								<img src="anniversary/pic16.jpg" alt="" />
 							</div>
 
 					</div>
