--- a/only-troyee.html
+++ b/only-troyee.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<div class="content">
 						<h1>Troyee</h1>
-						<h2>Welcome to Second page<br />
+						<h2>Welcome to All about you Page<br />
 						Of this website.</h2>
 						<a href="" class="button big alt"><span>Click To Explore</span></a>
 					</div>
@@ -97,11 +97,13 @@
 				<a href="#" class="info fa fa-info-circle"><span>About</span></a>
 				<div class="inner">
 					<div class="content">
-						<h3>Click to return Home page</h3>
-					<a href="index.html"><button> Home
+						<h3>Click to return Previous Page</h3>
+					<a href="second-page.html"><button> Previous
 					</button></a>
 					</div>
-					<!-- <div class="copyright">
+				
+			</footer>
+				<!-- <div class="copyright">
 						<h3>Follow me</h3>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -111,7 +113,6 @@
 						</ul>
 					</div>
 				</div> -->
-			</footer>
 
 		<!-- <div class="copyright">
 			Design by: <a href="https://templated.co/">TEMPLATED.CO</a>
