--- a/second-page.html
+++ b/second-page.html
@@ -97,16 +97,16 @@
 									</a>
 								</div>
 								<div class="card2">
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
+									<a href="anniversary.html">
+										<img src="anniversary\pic16.jpg" alt="" />
 										<h3>Our First anniversary</h3>
 									</a>
 									<a href="images/fulls/04.jpg">
 										<img src="images/thumbs/04.jpg" alt="" />
 										<h3>Laxmibazar</h3>
 									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
+									<a href="only-troyee.html">
+										<img src="onlyTroyee/ont10.jpg"  />
 										<h3>All about you</h3>
 									</a>
 								</div>
@@ -128,7 +128,7 @@
 
 			</div>
 		<div class="copyright">
-			Made with: <a href="https://templated.co/">Templated.co</a>
+			
 		</div>
 		<!-- Scripts -->
 			<script src="visualize/assets/js/jquery.min.js"></script>
