--- a/second-page.html
+++ b/second-page.html
@@ -91,8 +91,8 @@
 								
 									</div>
 								</a>
-									<a href="first-meet.html">
-										<img src="images/thumbs/02.jpg" alt="" />
+									<a href="college.html">
+										<img src="College/pic2.jpg" alt="" />
 										<h3>College Memories</h3>
 									</a>
 								</div>
