--- a/index.html
+++ b/index.html
@@ -112,21 +112,25 @@ transition: 1s;
 
 .card {
   left: 20%;
-  max-width: 600px;
+  max-width: 500px;
   border-radius: 0.5rem;
   background-color: #b38888;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   border: 1px solid transparent;
   margin-top: 50px;
   margin-bottom: 50px;
+
 }
 @media only screen and (max-width:768px){
   .card{
+    
     left: 5%;
     right: 5%;
     max-width: 400px;
+    
   }
 }
+
 .card .a-card {
   text-decoration: none
 }
@@ -154,7 +158,7 @@ transition: 1s;
 
 .desc-card {
   margin-top: 0.5rem;
-  color: #6B7280;
+  color: #d5deef;
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
@@ -329,13 +333,14 @@ transition: 1s;
    
      <a class="a-card" href="visualize\second-page.html">
        <span class="title-card span-card">
-         Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         This card Behold a lots of our memories
        </span>
      </a>
  
      <p class="desc-card">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-       dolores, possimus pariatur animi temporibus nesciunt praesentium 
+       Be careful when you are entering into it.
+       <br>
+       click on find out more to explore
      </p>
  
      <a class="action-card" href="second-page.html">
