--- a/anniversary.html
+++ b/anniversary.html
@@ -13,6 +13,7 @@
 	
 		<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/button.css">
+		<link rel="stylesheet" href="css/lightbox.css">
 		<!-- <link rel="stylesheet" href="assets/css/lightbox.css"> -->
 		<style>
 			
@@ -41,58 +42,60 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-								<img src="anniversary/pic1.jpg"  alt="" />
+							<a href="anniversary/pic1.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic1.jpg" >
+							</a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic15.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic4.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic4.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic3.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic12.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic12.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic4.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic11.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic11.jpg" ></a>
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit">
-								<img src="anniversary/pic5.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic9.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic9.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic6.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic6.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic6.jpg" ></a>
 							</div>
-							<div class="image fit">
-						<img src="anniversary/pic7.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic7.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="anniversary/pic7.jpg" ></a>
 							</div>
-							<div class="image fit">
-						<img src="anniversary/pic8.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic8.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="anniversary/pic8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit">
-							<img src="anniversary/pic9.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<img src="anniversary/pic14.jpg" ></a>
 							</div>
-							<div class="image fit">
-							<img src="anniversary/pic10.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<img src="anniversary/pic2.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic11.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic15.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic15.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic12.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic3.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic3.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit">
-								<a href=""><img src="anniversary/pic13.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic13.jpg" data-lightbox="Troyee" data-title="caption">
+								<a href=""><img src="anniversary/pic13.jpg" ></a>
 							</div>
-							<div class="image fit">
-						<img src="anniversary/pic14.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="anniversary/pic14.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic2.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic5.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic5.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="anniversary/pic16.jpg" alt="" />
+							<div class="image fit"> <a href="anniversary/pic16.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="anniversary/pic16.jpg" ></a>
 							</div>
 
 					</div>
@@ -119,6 +122,7 @@
 			<script src="fm-web/assets/js/skel.min.js"></script>
 			<script src="fm-web/assets/js/util.js"></script>
 			<script src="fm-web/assets/js/main.js"></script>
+			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
 
 	</body>
