--- a/first-meet.html
+++ b/first-meet.html
@@ -13,7 +13,8 @@
 	
 		<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/button.css">
-		<!-- <link rel="stylesheet" href="assets/css/lightbox.css"> -->
+		
+		<link rel="stylesheet" href="css/lightbox.css">
 		<style>
 			
 		</style>
@@ -41,58 +42,61 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-								<img src="first-meet/pic1.jpg"  alt="" />
+							<a href="first-meet/pic1.jpg" data-lightbox="First meet" data-title="First meet">
+
+								<img src="first-meet/pic1.jpg"  ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic15.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic15.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic15.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic3.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic3.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic3.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic4.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic4.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic4.jpg" ></a>
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit">
-								<img src="first-meet/pic5.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic5.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic5.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic6.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic6.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic6.jpg" ></a>
 							</div>
-							<div class="image fit">
-						<img src="first-meet/pic7.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic7.jpg" data-lightbox="First meet" data-title="First meet">
+						<img src="first-meet/pic7.jpg" ></a>
 							</div>
-							<div class="image fit">
-						<img src="first-meet/pic8.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic8.jpg" data-lightbox="First meet" data-title="First meet">
+						<img src="first-meet/pic8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit">
-							<img src="first-meet/pic9.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic9.jpg" data-lightbox="First meet" data-title="First meet">
+							<img src="first-meet/pic9.jpg" ></a>
 							</div>
-							<div class="image fit">
-							<img src="first-meet/pic10.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic10.jpg" data-lightbox="First meet" data-title="First meet">
+							<img src="first-meet/pic10.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic11.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic11.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic11.jpg" ></a>
 							</div>
-							<div class="image fit">
-								<img src="first-meet/pic12.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic12.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic12.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit">
-								<a href=""><img src="first-meet/pic13.jpg" alt="" />
+							<div class="image fit"><a href="first-meet/pic13.jpg" data-lightbox="First meet" data-title="First meet">
+								<a href=""><img src="first-meet/pic13.jpg" ></a>
+							</div>
+							<div class="image fit"><a href="first-meet/pic14jpg" data-lightbox="First meet" data-title="First meet">
+						<img src="first-meet/pic14.jpg" ></a>
+							</div>
+							<div class="image fit"><a href="first-meet/pic2.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic2.jpg" ></a>
 							</div>
 							<div class="image fit">
-						<img src="first-meet/pic14.jpg" alt="" />
-							</div>
-							<div class="image fit">
-								<img src="first-meet/pic2.jpg" alt="" />
-							</div>
-							<div class="image fit">
-								<img src="first-meet/pic16.jpg" alt="" />
+								<a href="first-meet/pic16.jpg" data-lightbox="First meet" data-title="First meet">
+								<img src="first-meet/pic16.jpg" ></a>
 							</div>
 
 					</div>
@@ -119,6 +123,7 @@
 			<script src="fm-web/assets/js/skel.min.js"></script>
 			<script src="fm-web/assets/js/util.js"></script>
 			<script src="fm-web/assets/js/main.js"></script>
+			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
 
 	</body>
