--- a/only-troyee.html
+++ b/only-troyee.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/button.css">
+		<link rel="stylesheet" href="css\lightbox.css">
 	</head>
 	<body>
 
@@ -34,58 +35,58 @@
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="#"><img src="onlyTroyee\ont1.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont1.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont1.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont2.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont2.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont2.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont3.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont3.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont3.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont4.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont4.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont4.jpg" ></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont5.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont5.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont5.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont6.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont6.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont6.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont7.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont7.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont7.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont8.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont8.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont9.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont9.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont9.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont10.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont10.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont10.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont11.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont11.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont11.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont12.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont12.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont12.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont13.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont13.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont13.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont14.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont14.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont14.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont15.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont15.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont15.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="onlyTroyee\ont16.jpg" alt="" /></a>
+								<a href="onlyTroyee\ont16.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont16.jpg" ></a>
 							</div>
 
 					</div>
@@ -123,6 +124,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="js/lightbox-plus-jquery.js"></script>
 
 	</body>
 </html>
