--- a/anniversary.html
+++ b/anniversary.html
@@ -28,9 +28,9 @@
 						<h1>Troyee</h1>
 						<h2>Welcome to Our<br />
 						first meet page.</h2>
-						<a href="#" class="button big alt"><span>Click To Explore</span></a>
+						<a href="" class="button big alt"><span>Click To Explore</span></a>
 					</div>
-					<a href="#" class="button hidden"><span>Let's Go</span></a>
+					<a href="second-page.html" class="button hidden"><span>Let's Go</span></a>
 				</div>
 			</header>
 
@@ -88,8 +88,8 @@
 							<div class="image fit"> <a href="anniversary/pic13.jpg" data-lightbox="Troyee" data-title="caption">
 								<a href=""><img src="anniversary/pic13.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic14.jpg" data-lightbox="Troyee" data-title="caption">
-						<img src="anniversary/pic14.jpg" ></a>
+							<div class="image fit"> <a href="anniversary/pic10.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="anniversary/pic10.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="anniversary/pic5.jpg" data-lightbox="Troyee" data-title="caption">
 								<img src="anniversary/pic5.jpg" ></a>
