--- a/second-page.html
+++ b/second-page.html
@@ -101,9 +101,9 @@
 										<img src="anniversary\pic16.jpg" alt="" />
 										<h3>Our First anniversary</h3>
 									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Laxmibazar</h3>
+									<a href="laxibazar.html">
+										<img src="laxmibazar\pic4.jpg" alt="" />
+										<h3>Laxmibazar &#60;3 Farashganj</h3>
 									</a>
 									<a href="only-troyee.html">
 										<img src="onlyTroyee/ont10.jpg"  />
@@ -111,7 +111,7 @@
 									</a>
 								</div>
 								<div class="card">
-									<a href="images/fulls/06.jpg">
+									<a href="dates.html">
 										<img src="images/thumbs/06.jpg" alt="" />
 										<h3>Dates</h3>
 									</a>
