--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ transition: 1s;
     
 
 <main  class="main" style="margin-top: 0;">
-  <div class="hbml">Happy Birthday my Love</div>
+  <div class="hbml"><span style="color: #588E47;">Happy</span><span  style="color:#37642A;">Birthday</span><span style="color: #FDE666;">To You</span> <span style="color:#DE656B;">my</span><span style="color: #C83B55">Love</span></div>
   <section class="ftco-section" >
     <div class="container">
       <div class="row">
@@ -311,9 +311,9 @@ transition: 1s;
 
     <div class="row featurette image " >
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;">In your eyes, <span style="color: rgb(94, 221, 221);">galaxies dance,</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;">and your smile paints the sunsets. <span style="font-size: 30px; color: rgb(255, 185, 135);">Happy birthday, my celestial love</span>.
-         <span style="font-size: 30px; color: rgb(247, 198, 163);"> A universe of joy you rise above.</span> &#128150&#128150&#128150&#128150 
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px; color: #6297c5;">In a universe of infinite possibilities, <span style="color: #057DCD;">You're the one who brings me serenity.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px; color: #43B0F1;">On your birthday, my heart sings and smiles, <span style="font-size: 30px; color:#e8eef1;">Happy birthday, my love, forever in your style.</span>
+         &#128150&#128150&#128150&#128150 
         </p>
       </div>
       <div class="col-md-5" data-aos="fade-left">
@@ -326,9 +326,9 @@ transition: 1s;
     <div class="row featurette image">
       <div class="col-md-7 order-md-2">
         <div style="margin-left: 45px;">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;">In your laughter, I find melodies of joy,<span style="color: rgb(94, 221, 221);">A dance of happiness no one can destroy.</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;"> Your touch, a gentle breeze on my skin,
-          With you, my love, life's victories begin.<span style="font-size: 30px; color: rgb(255, 185, 135);">Happy birthday, my joyous Melody.</span> &#128158 .</p>
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px; color: #94c073;">In your laughter, I find melodies of joy,<span style="color: #5e9264">A dance of happiness no one can destroy.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px; color: #b1d8b7;"> Your touch, a gentle breeze on my skin,
+          With you, my love, life's victories begin.<span style="font-size: 30px; color:#76b947;">Happy birthday, my joyous Melody.</span> &#128158.</p>
       </div></div>
       <div class="col-md-5 order-md-1" >
         <img src="images\carasouls\pic3.jpg" class="border rounded mx-auto d-block featurette-image"  >
@@ -339,10 +339,10 @@ transition: 1s;
 
     <div class="row featurette image">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;">Like a rose, you bloom with grace,<span style="color: rgb(94, 221, 221);">Spreading love's fragrance in every embrace.</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;">With each smile, my heart takes flight,
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px; color: #e43d40;">Like a rose, you bloom with grace,<span style="color: #f37970;">Spreading love's fragrance in every embrace.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px;color: #f85c70;">With each smile, my heart takes flight,
           Forever grateful you're my shining light.
-          <span style="font-size: 30px; color: rgb(255, 185, 135);">Happy birthday, my blooming beauty</span> &#128152 .</p>
+          <span style="font-size: 30px; color: #fabec0;">Happy birthday, my blooming beauty</span> &#128152 .</p>
       </div>
       <div class="col-md-5">
         <img src="images\carasouls\pic1.jpg" class="border rounded mx-auto d-block featurette-image">
@@ -352,15 +352,16 @@ transition: 1s;
     <hr class="featurette-divider">
 
 
-    <div class="row featurette image">
-      <div class="col-md-7 order-md-2">
-        <div style="margin-left: 45px;">
-        <h2 class="featurette-heading fw-normal lh-1" >Your laughter, <span class="text-body-secondary">a symphony of joy,</span></h2>
-        <p class="lead"> echoes through my days, filling them with endless delight.</p>
-      </div></div>
-      <div class="col-md-5 order-md-1" >
-        <img src="images\carasouls\pic3.jpg" class="border rounded mx-auto d-block featurette-image"  >
+    <div class="row featurette image " >
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;color: #a47a65;;">In your eyes, <span style="color: #E1C291;">galaxies dance,</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px;color: #fdf4e3;;">and your smile paints the sunsets. <span style="font-size: 30px; ">Happy birthday, my celestial love</span>.
+         <span style="font-size: 30px; color: rgb(247, 198, 163);"> A universe of joy you rise above.</span> &#128150&#128150&#128150&#128150 
+        </p>
       </div>
+      <div class="col-md-5" data-aos="fade-left">
+        <img src="images\carasouls\pic1.jpg" class="border rounded mx-auto d-block featurette-image" ></div>
+      
     </div>
 
     <hr class="featurette-divider">
