--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ transition: 1s;
     
 
 <main  class="main" style="margin-top: 0;">
-  <div class="hbml"><span style="color: #588E47;">Happy</span><span  style="color:#37642A;">Birthday</span><span style="color: #FDE666;">To You</span> <span style="color:#DE656B;">my</span><span style="color: #C83B55">Love</span></div>
+  <div class="hbml"><span style="color: #ff662a;">Happy </span><span  style="color:#ffa22a;">Birthday</span><span style="color: #82ac26;"> To You</span> <span style="color:#4f3f84">my </span><span style="color: #C83B55">Love</span></div>
   <section class="ftco-section" >
     <div class="container">
       <div class="row">
@@ -354,9 +354,9 @@ transition: 1s;
 
     <div class="row featurette image " >
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;color: #a47a65;;">In your eyes, <span style="color: #E1C291;">galaxies dance,</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;color: #fdf4e3;;">and your smile paints the sunsets. <span style="font-size: 30px; ">Happy birthday, my celestial love</span>.
-         <span style="font-size: 30px; color: rgb(247, 198, 163);"> A universe of joy you rise above.</span> &#128150&#128150&#128150&#128150 
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;color: #936f5d;">In your eyes,galaxies dance, <span style="color:#e1c391;">and your smile paints the sunsets.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px;color: #fdf4e3;"> <span style="font-size: 30px; ">Happy birthday, my celestial love</span>.
+         <span style="font-size: 30px; color: #ae4d2a;"> A universe of joy you rise above.</span> &#128150&#128150&#128150&#128150 
         </p>
       </div>
       <div class="col-md-5" data-aos="fade-left">
@@ -369,10 +369,9 @@ transition: 1s;
 
     <div class="row featurette image">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;">Like a rose, you bloom with grace,<span style="color: rgb(94, 221, 221);">Spreading love's fragrance in every embrace.</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;">With each smile, my heart takes flight,
-          Forever grateful you're my shining light.
-          <span style="font-size: 30px; color: rgb(255, 185, 135);">Happy birthday, my blooming beauty</span> &#128152 .</p>
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px; color:#059dc0">Your beauty, like the ocean's endless expanse, <span style="color:#6af2f0;">Waves that crash with power and might.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px; color: #04d4f0">In your presence, love takes its chance,
+          <span style="font-size: 30px; color: #04ecf0;">Happy birthday, my love's delight.</span> &#128152 .</p>
       </div>
       <div class="col-md-5">
         <img src="images\carasouls\pic1.jpg" class="border rounded mx-auto d-block featurette-image">
@@ -384,8 +383,9 @@ transition: 1s;
     <div class="row featurette image">
       <div class="col-md-7 order-md-2">
         <div style="margin-left: 45px;">
-        <h2 class="featurette-heading fw-normal lh-1" >Your laughter, <span class="text-body-secondary">a symphony of joy,</span></h2>
-        <p class="lead"> echoes through my days, filling them with endless delight.</p>
+        <h2 class="featurette-heading fw-normal lh-1 " style="color: #a47a65;" >In your innocence, a strength resides,  <span class="text-body-secondary" style="color:  #EC8fd0;">A purity that the world can't divide.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px; color: #d43790">Your smile, a beacon of joy and glee,
+          <span style="font-size: 30px; color: #f2c5e0;">Happy birthday, my gentle soul so free.</span> &#128152 .</p>
       </div></div>
       <div class="col-md-5 order-md-1" >
         <img src="images\carasouls\pic3.jpg" class="border rounded mx-auto d-block featurette-image"  >
@@ -395,10 +395,9 @@ transition: 1s;
 
     <div class="row featurette image">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;">Like a rose, you bloom with grace,<span style="color: rgb(94, 221, 221);">Spreading love's fragrance in every embrace.</span></h2>
-        <p class="lead" style="font-weight: 400;font-size: 25px;">With each smile, my heart takes flight,
-          Forever grateful you're my shining light.
-          <span style="font-size: 30px; color: rgb(255, 185, 135);">Happy birthday, my blooming beauty</span> &#128152 .</p>
+        <h2 class="featurette-heading fw-normal lh-1" style="font-size: 40px;color: #7f58af;">Like a butterfly's wings, your spirit dances,<span style="color:#64c5eb;">Spreading joy and kindness in all chances.</span></h2>
+        <p class="lead" style="font-weight: 400;font-size: 25px; color: #e84d8a;">Your love, a melody that soothes and sings,
+          <span style="font-size: 30px; color: #feb326;">Happy birthday, my soft and kind wings.</span> &#128152 .</p>
       </div>
       <div class="col-md-5">
         <img src="images\carasouls\pic1.jpg" class="border rounded mx-auto d-block featurette-image">
