--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" href="css\input.css">
+<!-- <link rel="stylesheet" href="css\input.css"> -->
 <link rel="stylesheet" href="css/images.css">
 
 
@@ -61,7 +61,7 @@
 		<link rel="stylesheet" href="carousel/css/style.css">
     <link rel="stylesheet" href="css\lightbox.css">
 <!-- ================================================================ -->
-    <link rel="stylesheet" href="assets\css\happy-birthday.css">
+    <!-- <link rel="stylesheet" href="assets\css\happy-birthday.css"> -->
     <link rel="stylesheet" href="css\card.css">
     <style>
     body{
@@ -134,35 +134,7 @@ transition: 1s;
   </head>
   <body>
  
- <div class="birthday-card " style="top:20%; left:10%">
-  <div class="bday-card" >
-    <div class="cake">
-    <div class="cake-bottom"></div>
-    <div class="cake-middle"></div>
-    <div class="cake-top"></div>
-      <div class="candle"></div>
-      <div class="flame"></div>
-      <div class="shadow"></div>
-    </div>
-    <div class="confetti">
-      <div class="squareOne"></div>
-      <div class="squareTwo"></div>
-      <div class="squareThree"></div>
-      <div class="squareFour"></div>
-      <div class="squareFive"></div>
-      <div class="squareSix"></div>
-      <div class="squareSeven"></div>
-      <div class="squareEight"></div>
-      <div class="squareNine"></div>
-      <div class="squareTen"></div>
-    </div>
-    <div class="birthday-text">Happy Birthday!
-      
-    </div>
  
-  </div>
-  
-</div>
 
 
     <div class="entire-page" style="top:0; margin-top: 0;">
@@ -368,20 +340,7 @@ transition: 1s;
 </main>
 </div>
 
-<div class="input-name js-login-page">
-  <div class="input-container">
-    <div class="inputbox">
-      <input required="required" type="text"class="js-main-input input">
-      <span>Enter Your Name</span>
-      <i></i>
-  </div>
-</div><button class="js-enter-btn" style="margin-top: 20px;">
-  
-  <span class="edge"></span>
-  <span class="front text"> Click me
-  </span>
-</button>
-</div>
+
 <script src="../assets/js/color-modes.js"></script>
 
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
@@ -391,7 +350,7 @@ transition: 1s;
 
 
 </script>
-<script src="js/login.js"></script>
+<!-- <script src="js/login.js"></script> -->
 <!-- carousel-script ===================================================-->
 <script src="carousel/js/jquery.min.js"></script>
 <script src="carousel/js/popper.js"></script>
