--- a/second-page.html
+++ b/second-page.html
@@ -92,7 +92,7 @@
 									</div>
 								</a>
 									<a href="college.html">
-										<img src="College/pic4.jpg" alt="" />
+										<img src="college/pic4.jpg" alt="" />
 										<h3>College Memories</h3>
 									</a>
 								</div>
