--- a/laxibazar.html
+++ b/laxibazar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Our first meet</title>
+		<title>Laxmibazar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="fm-web/assets/css/main.css" />
@@ -26,11 +26,12 @@
 				<div class="inner">
 					<div class="content">
 						<h1>Troyee</h1>
-						<h2>Welcome to Our<br />
-						first meet page.</h2>
+						<h2>Welcome to <br />
+						laxmibazar & Farashganj <br>
+					memory page</h2>
 						<a href="#" class="button big alt"><span>Click To Explore</span></a>
 					</div>
-					<a href="#" class="button hidden"><span>Let's Go</span></a>
+					<a href="second-page.html" class="button hidden"><span>Let's Go</span></a>
 				</div>
 			</header>
 
@@ -42,22 +43,22 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-							<a href="laxmibazar/pic1.jpg" data-lightbox="Troyee" data-title="caption">
+							<a href="laxmibazar/pic1.jpg" data-lightbox="Troyee" data-title="Our Last Tea together in Laxmibazar">
 								<img src="laxmibazar/pic1.jpg" >
 							</a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic4.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic4.jpg" data-lightbox="Troyee" data-title="I hold your hand on Friendship Day">
 								<img src="laxmibazar/pic4.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic12.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic12.jpg" data-lightbox="Troyee" data-title="Our first Boat ride">
 								<img src="laxmibazar/pic12.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic11.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic11.jpg" data-lightbox="Troyee" data-title="We nibba&#8208nibbis on boat">
 								<img src="laxmibazar/pic11.jpg" ></a>
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="laxmibazar/pic9.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic9.jpg" data-lightbox="Troyee" data-title="Tea+Sunset">
 								<img src="laxmibazar/pic9.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic6.jpg" data-lightbox="Troyee" data-title="caption">
@@ -66,12 +67,12 @@
 							<div class="image fit"> <a href="laxmibazar/pic7.jpg" data-lightbox="Troyee" data-title="caption">
 						<img src="laxmibazar/pic7.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic8.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic8.jpg" data-lightbox="Troyee" data-title="Eh koto Filter martam">
 						<img src="laxmibazar/pic8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit"> <a href="laxmibazar/pic10.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic10.jpg" data-lightbox="Troyee" data-title="Our asthetic Pic on our first Boat ride">
 							<img src="laxmibazar/pic10.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic2.jpg" data-lightbox="Troyee" data-title="caption">
@@ -80,21 +81,21 @@
 							<div class="image fit"> <a href="laxmibazar/pic15.jpg" data-lightbox="Troyee" data-title="caption">
 								<img src="laxmibazar/pic15.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic3.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic3.jpg" data-lightbox="Troyee" data-title="Ei selfie tular age maybe jhogra hoisilo">
 								<img src="laxmibazar/pic3.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="laxmibazar/pic13.jpg" data-lightbox="Troyee" data-title="caption">
-								<a href=""><img src="laxmibazar/pic13.jpg" ></a>
+							<div class="image fit"> <a href="laxmibazar/pic13.jpg" data-lightbox="Troyee" data-title="Yee! noukay uthsii">
+								<img src="laxmibazar/pic13.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic14.jpg" data-lightbox="Troyee" data-title="caption">
 						<img src="laxmibazar/pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic5.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic5.jpg" data-lightbox="Troyee" data-title="This Picture has a special place on our heart">
 								<img src="laxmibazar/pic5.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic16.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic16.jpg" data-lightbox="Troyee" data-title="We are so freaking cute together">
 								<img src="laxmibazar/pic16.jpg" ></a>
 							</div>
 
