--- a/second-page.html
+++ b/second-page.html
@@ -212,7 +212,7 @@
 									</a>
 									<a href="">
 										<img src=""  />
-										<h3>Specials</h3>
+										<h3>Special Ending</h3>
 									</a>
 								</div>
 								<div class="card scale-in-hor-right">
@@ -221,8 +221,15 @@
 										<h3>Dates</h3>
 									</a>
 									<a href="only-troyee.html">
-										<img src="onlyTroyee\ont10.jpg" alt="" />
+										<img src="onlyTroyee\ont10.jpg" height="150px" />
 										<h3>All about you</h3>
+									</a>
+									<a href="videos.html">
+										<video src="videos/vid16.mp4" autoplay loop muted style=" height: 100%;
+										width: 100%;
+										object-fit: cover;
+										transition: .2s linear;">
+									
 									</a>
 								</div>
 							</section>
