--- a/dates.html
+++ b/dates.html
@@ -42,60 +42,69 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-							<a href="college/pic1.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic1.jpg" >
+							<a href="dates\pic19.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic19.jpg" >
 							</a>
 							</div>
-							<div class="image fit"> <a href="college/pic4.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic4.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic4.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic4.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic12.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic12.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic12.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic12.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic11.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic11.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic11.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic11.jpg" ></a>
 							</div>
-							
+							<div class="image fit"> <a href="dates\pic13.jpg" data-lightbox="Troyee" data-title="caption">
+								<a href=""><img src="dates\pic13.jpg" ></a>
+							</div>
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="college/pic9.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic9.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic9.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic9.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic6.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic6.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic6.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic6.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic7.jpg" data-lightbox="Troyee" data-title="caption">
-						<img src="college/pic7.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic7.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="dates\pic7.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic8.jpg" data-lightbox="Troyee" data-title="caption">
-						<img src="college/pic8.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic8.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="dates\pic8.jpg" ></a>
 							</div>
-
+							<div class="image fit"> <a href="dates\pic17.jpg" data-lightbox="Troyee" data-title="caption">
+								<a href=""><img src="dates\pic17.jpg" ></a>
+							</div>
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="caption">
-							<img src="college/pic14.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<img src="dates\pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic2.jpg" data-lightbox="Troyee" data-title="caption">
-							<img src="college/pic2.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<img src="dates\pic2.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic15.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic15.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic15.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic15.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic3.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic3.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic3.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic3.jpg" ></a>
 							</div>
-
+							<div class="image fit"> <a href="dates\pic18.jpg" data-lightbox="Troyee" data-title="caption">
+								<a href=""><img src="dates\pic18.jpg" ></a>
+							</div>
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="college/pic13.jpg" data-lightbox="Troyee" data-title="caption">
-								<a href=""><img src="college/pic13.jpg" ></a>
+						<div class="image fit"> <a href="dates\pic1.jpg" data-lightbox="Troyee" data-title="caption">
+							<a href=""><img src="dates\pic1.jpg" ></a>
+						</div>
+						<div class="image fit"> <a href="dates\pic20.jpg" data-lightbox="Troyee" data-title="caption">
+								<a href=""><img src="dates\pic20.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="caption">
-						<img src="college/pic14.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic14.jpg" data-lightbox="Troyee" data-title="caption">
+						<img src="dates\pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic5.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic5.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic5.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic5.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic16.jpg" data-lightbox="Troyee" data-title="caption">
-								<img src="college/pic16.jpg" ></a>
+							<div class="image fit"> <a href="dates\pic16.jpg" data-lightbox="Troyee" data-title="caption">
+								<img src="dates\pic16.jpg" ></a>
 							</div>
 
 					</div>
