--- a/second-page.html
+++ b/second-page.html
@@ -217,7 +217,7 @@
 								</div>
 								<div class="card scale-in-hor-right">
 									<a href="dates.html">
-										<img src="images/thumbs/06.jpg" alt="" />
+										<img src="dates/pic19.jpg" height="200px">
 										<h3>Dates</h3>
 									</a>
 									<a href="only-troyee.html">
