--- a/videos.html
+++ b/videos.html
@@ -79,6 +79,7 @@ transform: scale(1.1);
   border: 3px solid #fff;
   border-radius: 5px;
   object-fit: cover;
+  background-color: black;
 }
 .container .popup-video span{
   position: absolute;
